--- a/css/main.css
+++ b/css/main.css
@@ -1408,7 +1408,44 @@ ymaps .termin-main-box {
   cursor: e-resize;
 }
 
+.page-node-2 .modal-filter form .inputs .input .input-range input[type=range]::-ms-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 7px;
+  height: 7px;
+  margin-top: -3px;
+  border-radius: 50%;
+  background: #5947B3;
+  cursor: e-resize;
+}
+
+.page-node-2 .modal-filter form .inputs .input .input-range input[type=range]::-moz-range-thumb {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  width: 7px;
+  height: 7px;
+  margin-top: -4px;
+  border-radius: 50%;
+  background: #5947B3;
+  cursor: e-resize;
+}
+
 .page-node-2 .modal-filter form .inputs .input .input-range input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 1px;
+  cursor: e-resize;
+  background: #5947B3;
+}
+
+.page-node-2 .modal-filter form .inputs .input .input-range input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 1px;
+  cursor: e-resize;
+  background: #5947B3;
+}
+
+.page-node-2 .modal-filter form .inputs .input .input-range input[type=range]::-ms-track {
   width: 100%;
   height: 1px;
   cursor: e-resize;
