--- a/css/main.css
+++ b/css/main.css
@@ -777,6 +777,7 @@ ymaps .termin-main-box {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-right: 16px;
 }
 
 .page-node-2 .filter-map .map-apart .apart-otherLots .otherLots-filter a svg {
